# PythonProject1

./: .env  .gitignore  ARCHITECTURE_REFACTORING_COMPLETE.md  AUTH0_UPGRADE_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  DB_OPTIMIZATION_TEST_RESULTS.md  KEYCLOAK_ENVIRONMENT_SETUP.md  KEYCLOAK_MIGRATION_SUMMARY.md  KEYCLOAK_TROUBLESHOOTING.md  MEDICATION_LOGISTICS_PWA.md  MEDICATION_LOGISTICS_README.md  POETRY_ALEMBIC_MIGRATION_COMPLETE.md  QUICK_START.md  QUICK_START_COMMANDS.md  README.md  SERVICE_STATUS.md  TDD_IMPLEMENTATION_COMPLETE.md  TDD_IMPLEMENTATION_PLAN.md  TECHNICAL_DOCS.md  auth_optimized_test.py  auth_security_test.py  build.bat  build.sh  create_certs.bat  docker-compose.yml  package-lock.json  package.json  postgres.conf  seed_db.py  setup_keycloak.py  simple_cache_test.py  simple_db_test.py  simple_token_test.py  test_db_optimizations.py  test_migration.sh  traefik.yml  update_hosts.bat
backend/: .env.backup2  .env.backup3  COLLABORATIVE_IMPLEMENTATION.md  DATABASE_HARDENING_COMPLETE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  N_PLUS_ONE_FIX_SUMMARY.md  TDD_DRUG_TRANSFER_IMPLEMENTATION.md  TDD_IMPLEMENTATION_SUMMARY.md  TESTING.md  add_keycloak_user.py  alembic.ini  auth.py  auth_optimized_test.py  blockchain.py  cache.py  comprehensive_db_test.py  config.py  crud.py  database.py  dependencies.py  docker_fixes_validation.py  exceptions.py  generate_test_tokens.py  gunicorn.conf.py  main.py  migrate_users_to_auth0.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  schemas.py  security.py  security_original.py  security_test.py  seed.py  (+10 more)
(+146 files in other folders)
